name:                ign
version:             0.1
-- synopsis:            
-- description:         
homepage:            https://github.com/lesguillemets/ign
license:             MIT
license-file:        LICENSE
author:              lesguillemets
maintainer:          kgkacko+github@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable ign
  main-is:             Main.hs
  other-modules:       Base
  other-extensions:    OverloadedLists
  build-depends:       base >=4.8 && <4.9
                     , containers
                     , process
                     , directory
                     , filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
